# RenderingLearn

./: .gitignore  BuildDeps.bat  CMakeLists.txt  ReadMe.md
resources/GLB/: low_poly_nature_free.glb
resources/material/AsphaltDamageSet001_1K-JPG/: AsphaltDamageSet001_1K-JPG.mtlx  AsphaltDamageSet001_1K-JPG.usdc
resources/shader/glsl/: DrawSimpleTriangle.vert
src/: main.cpp  test.cpp
src/Examples/: DrawSimpleTriangleSample.cpp  DrawSimpleTriangleSample.h
src/Examples/Artifacts/: PBRArtifactExample.cpp  PBRArtifactExample.frag  PBRArtifactExample.h  PBRArtifactExampleBG.frag  PBRArtifactExampleBG.vert  SceenArtifactExample.cpp  SceenArtifactExample.frag  SceenArtifactExample.geom  SceenArtifactExample.h  SceenArtifactExample.vert  SceenArtifactExampleFrogBlend.frag  SceenArtifactExampleLightDepth.frag  SceenArtifactExampleLightDepth.vert  SceenArtifactExampleLightDepthMapCopy.frag  SceenArtifactExampleLightDepthMapCopy.vert
src/Examples/PBRT4/: DisturbutionLobeExample.cpp  DisturbutionLobeExample.frag  DisturbutionLobeExample.h  DisturbutionLobeExample.vert  ReflectionModelsExample.cpp  ReflectionModelsExample.frag  ReflectionModelsExample.h  ReflectionModelsExample.vert  SamplePointsExample.comp  SamplePointsExample.cpp  SamplePointsExample.frag  SamplePointsExample.h  SamplePointsExample.vert  VolumeScatteringExample.cpp  VolumeScatteringExample.frag  VolumeScatteringExample.h  VolumeScatteringExample.vert
src/Examples/RealTimeRendering4/: C10LocalIlluminationExample.cpp  C10LocalIlluminationExample.frag  C10LocalIlluminationExample.geom  C10LocalIlluminationExample.h  C10LocalIlluminationExamplePrecompute.vert  C11GlobalIlluminationExample.cpp  C11GlobalIlluminationExample.frag  C11GlobalIlluminationExample.h  C11GlobalIlluminationExampleDepthPass.frag  C11GlobalIlluminationExamplePrecomputeEnvSH.comp  C12ImageSpaceEffectesExample.comp  C12ImageSpaceEffectesExample.cpp  C12ImageSpaceEffectesExample.frag  C12ImageSpaceEffectesExample.h  C12ImageSpaceEffectesExample.vert  C14VolumetricandTranslucencyRenderingExample.cpp  C14VolumetricandTranslucencyRenderingExample.frag  C14VolumetricandTranslucencyRenderingExample.h  C14VolumetricandTranslucencyRenderingExample.vert  C14VolumetricandTranslucencyRenderingExampleBackground.frag  C14VolumetricandTranslucencyRenderingExampleBackground.vert  C15NonPhotorealisticRenderingExample.cpp  C15NonPhotorealisticRenderingExample.frag  C15NonPhotorealisticRenderingExample.h  C16CurvesAndCurvedSurfacesExample.cpp  C16CurvesAndCurvedSurfacesExample.frag  C16CurvesAndCurvedSurfacesExample.h  C16CurvesAndCurvedSurfacesExampleSurfaces.mesh  C17CurvesAndCurvedSurfacesExample.cpp  C17CurvesAndCurvedSurfacesExample.h  C17CurvesAndCurvedSurfacesExample.task  C17CurvesAndCurvedSurfacesExampleCurves.mesh  C19AccelerationAlgorithmsExample.cpp  C19AccelerationAlgorithmsExample.frag  C19AccelerationAlgorithmsExample.h  C19AccelerationAlgorithmsExample.vert  C19AccelerationAlgorithmsExampleLODBlend.frag  C19AccelerationAlgorithmsExampleMesh.frag  C20EfficientShadingExample.cpp  C20EfficientShadingExample.frag  (+38 more)
src/Examples/SimpleExamples/: DrawSimgleTriangle.frag  DrawSimpleTriangleSample.cpp  DrawSimpleTriangleSample.h  GeometryShaderExample.cpp  GeometryShaderExample.geom  GeometryShaderExample.h  GuiVulkanTest.cpp  SimpleMeshShaderExample.cpp  SimpleMeshShaderExample.frag  SimpleMeshShaderExample.h  SimpleMeshShaderExample.mesh  SimpleMeshShaderExample.task  SimpleSceenExample.cpp  SimpleSceenExample.h  SimpleSceenExample.vert  SimpleTessellationExample.cpp  SimpleTessellationExample.frag  SimpleTessellationExample.h  SimpleTessellationExample.tesc  SimpleTessellationExample.tese  SimpleTessellationExample.vert  SkyBoxExample.cpp  SkyBoxExample.frag  SkyBoxExample.h  SkyBoxExample.vert  TranslucentBlendExample.cpp  TranslucentBlendExample.frag  TranslucentBlendExample.h  TranslucentBlendExample.vert  UniformExample.cpp  UniformExample.frag  UniformExample.h  VkImguiExample.cpp  VkImguiExample.h
src/Framework/: ExampleBase.cpp  ExampleBase.h  ExampleBaseVK.cpp  ExampleBaseVK.h  PresentPass.frag  PresentPass.vert
src/Framework/API/: VulkanAPI.cpp  VulkanAPI.h  VulkanDefMap.cpp  VulkanDefMap.h
src/Framework/Common/: GlmShowTool.hpp  Log.h  Template.hpp  Transform.cpp  Transform.h  tiny_obj_loader.h
src/Framework/Utils/: Camera.cpp  Camera.h  ImageFileTool.cpp  ImageFileTool.h  RenderDocTool.cpp  RenderDocTool.h  WindowEventHandler.cpp  WindowEventHandler.h  powitacq_rgb.cpp  stb_image.h
src/Test/: GUIOpenGLTest.cpp  GuiVulkanTest.cpp
